# travel-sentinel

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  SETUP.md  VISA_HYBRID_APPROACH.md  docker-compose.yml  pyproject.toml
n8n/: SETUP.md  travel_sentinel_workflow.json
sql/: 001_init.sql  002_visa_rules_twov.sql
src/: logging_config.py  main.py
src/api/: app.py
src/db/: deals_repo.py  models.py  pool.py  visa_repo.py
src/models/: __init__.py  config.py  deals.py  visa.py
src/scrapers/: aviasales.py  base.py  circuit_breaker.py  iata_countries.py  orchestrator.py  travelata.py
src/visa/: cache_warmer.py  checker.py  golden_tests.py  validator.py
